examples/test/testpolicy17611.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17611
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key40: value2
      key16: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value21
      podSelector:
        matchLabels:
          key10: value14
          key17: value21
          key7: value2
